--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -24,11 +24,15 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - WED 08/24/2022
 
 ### () - TUE 08/23/2022
+* () updated desc for youtube videos from threejs-object3d-scale forward
+
 * () start r1 in for post folder on threejs-examples-camera-kit
 * () edit threejs-examples-camera-kit
 * () threejs-examples-weird-face-two for post folder
 
 ### () - MON 08/22/2022
+* (done) updated desc for youtube videos to object3d-lookat
+
 * () videoground-blog-posts: tiny-house-1 dae folder
 * () edit electronjs-example-user-data-file
 * () buld and publish
@@ -49,7 +53,6 @@ I wnated to create a new threejs prototype for this fridays post but in place of
 
 ### () - SAT 08/20/2022
 * (done) videoground-blog-posts: update template4-seqhooks-obj-grid-land to use land-set-one
-* () videoground-blog-posts: 
 
 ### () - FRI 08/19/2022
 * (done) work on electronjs-examples-user-data-file
