--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -33,9 +33,8 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - MON 08/22/2022
 * (done) updated desc for youtube videos to object3d-lookat
 * (done) videoground-blog-posts: tiny-house-1 dae folder
-
-* () videoground-blog-posts: new video for threejs-lambert-material using new tiny-house-1 template
-* () edit threejs-lambert-material
+* (done) videoground-blog-posts: new video for threejs-lambert-material using new tiny-house-1 template
+* (done) edit threejs-lambert-material
 
 * () edit electronjs-example-user-data-file
 * () buld and publish
