--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -26,21 +26,20 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - TUE 08/23/2022
 * () updated desc for youtube videos from threejs-object3d-scale forward
 
-* () start r1 in for post folder on threejs-examples-camera-kit
-* () edit threejs-examples-camera-kit
-* () threejs-examples-weird-face-two for post folder
+* () videoground-blog-posts: 
+* () edit threejs-
+
+* () buld and publish
+
+* () weird-face-two prototype
+* () work on r6 of videoground
+
 
 ### () - MON 08/22/2022
 * (done) updated desc for youtube videos to object3d-lookat
 * (done) videoground-blog-posts: tiny-house-1 dae folder
 * (done) videoground-blog-posts: new video for threejs-lambert-material using new tiny-house-1 template
 * (done) edit threejs-lambert-material
-
-* () edit electronjs-example-user-data-file
-* () buld and publish
-
-* () weird-face-two prototype
-* () work on r6 of videoground
 
 ### () - SUN 08/21/2022
 * (done) videoground-blog-posts: start new tiny-house-1 dae folder
