--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -22,12 +22,13 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - THU 08/25/2022
 
 ### () - WED 08/24/2022
-* () updated desc for youtube videos from threejs-standard-material
+* () updated desc for youtube videos from threejs-examples-weird-walk-one
 
 ### () - TUE 08/23/2022
 * (done) updated desc for youtube videos from threejs-object3d-scale
 * (done) updated desc for youtube videos from threejs-materials-transparent
 * (done) updated desc for youtube videos from threejs-buffer-geometry-attributes-position
+* (done) updated desc for youtube videos from threejs-standard-material
 
 * () videoground-blog-posts: 
 * () edit threejs-
