--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -18,22 +18,23 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 
 ### () - FRI 08/26/2022
 * () start post #1002 on threejs-examples-weird-face-two
+* () buld and publish
 
 ### () - THU 08/25/2022
 
 ### () - WED 08/24/2022
 * () updated desc for youtube videos from threejs-examples-weird-walk-one
 
+* () videoground-blog-posts: 
+* () edit threejs-
+
 ### () - TUE 08/23/2022
 * (done) updated desc for youtube videos from threejs-object3d-scale
 * (done) updated desc for youtube videos from threejs-materials-transparent
 * (done) updated desc for youtube videos from threejs-buffer-geometry-attributes-position
 * (done) updated desc for youtube videos from threejs-standard-material
-
-* () videoground-blog-posts: 
-* () edit threejs-
-
-* () buld and publish
+* (done) videoground-blog-posts: threejs-point-light
+* (done) edit threejs-point-light
 
 * () weird-face-two prototype
 * () work on r6 of videoground
