--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -25,8 +25,11 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - WED 08/24/2022
 * () updated desc for youtube videos from threejs-examples-weird-walk-one
 
-* () videoground-blog-posts: 
-* () edit threejs-
+* () videoground-blog-posts: threejs-vector3-normalize
+* () edit threejs-vector3-normalize
+
+* () weird-face-two prototype
+* () work on r6 of videoground
 
 ### () - TUE 08/23/2022
 * (done) updated desc for youtube videos from threejs-object3d-scale
@@ -35,10 +38,6 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * (done) updated desc for youtube videos from threejs-standard-material
 * (done) videoground-blog-posts: threejs-point-light
 * (done) edit threejs-point-light
-
-* () weird-face-two prototype
-* () work on r6 of videoground
-
 
 ### () - MON 08/22/2022
 * (done) updated desc for youtube videos to object3d-lookat
