--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -25,9 +25,9 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 
 ### () - WED 08/24/2022
 * (done) updated desc for youtube videos from threejs-examples-weird-walk-one
-* () updated desc for youtube videos from threejs-scene
-* () updated desc for youtube videos from threejs-examples-backyard
-* () updated desc for youtube videos from threejs-examples-basic-framework
+* (done) updated desc for youtube videos from threejs-scene
+* (done) updated desc for youtube videos from threejs-examples-backyard
+* (done) updated desc for youtube videos from threejs-examples-basic-framework
 
 * () videoground-blog-posts: threejs-vector3-normalize
 * () edit threejs-vector3-normalize
