--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -28,12 +28,10 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * (done) updated desc for youtube videos from threejs-scene
 * (done) updated desc for youtube videos from threejs-examples-backyard
 * (done) updated desc for youtube videos from threejs-examples-basic-framework
-
 * (done) start new for post folder for threejs-vector3-normalize
-* () start a new animation example for the post that will also be used in the video
-
-* () videoground-blog-posts: threejs-vector3-normalize
-* () edit threejs-vector3-normalize
+* (done) start a new animation example for the post that will also be used in the video
+* (done) videoground-blog-posts: threejs-vector3-normalize
+* (done) edit threejs-vector3-normalize
 
 * () weird-face-two prototype
 * () work on r6 of videoground
