--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -22,6 +22,7 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 
 ### () - THU 08/25/2022
 * () weird-face-two prototype
+* () work on land-set-one dae folder in test threejs along with r3 of land object wrap example
 * () work on r6 of videoground
 
 * () updated desc for youtube videos from threejs-examples-biplane
