--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -21,11 +21,16 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * () buld and publish
 
 ### () - THU 08/25/2022
+* (done) updated desc for youtube videos from threejs-examples-biplane
+* (done) updated desc for youtube videos from threejs-mesh-copy
+* (done) updated desc for youtube videos from threejs-examples-nested-groups
+* (done) updated desc for youtube videos from threejs-examples-tree
+
 * () weird-face-two prototype
 * () work on land-set-one dae folder in test threejs along with r3 of land object wrap example
 * () work on r6 of videoground
 
-* () updated desc for youtube videos from threejs-examples-biplane
+
 
 ### () - WED 08/24/2022
 * (done) updated desc for youtube videos from threejs-examples-weird-walk-one
