--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -17,20 +17,21 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - SAT 08/27/2022
 
 ### () - FRI 08/26/2022
-* () start post #1002 on threejs-examples-weird-face-two
+* () for post folder for threejs-examples-many-object-tweening based on r140 proto-many-object-tweening
+* () video1 for threejs-examples-many-object-tweening
+* () start post #1002 on threejs-examples-many-object-tweening
 * () buld and publish
+
+* () weird-face-two prototype
+* () work on land-set-one dae folder in test threejs along with r3 of land object wrap example
+* () work on r6 of videoground
 
 ### () - THU 08/25/2022
 * (done) updated desc for youtube videos from threejs-examples-biplane
 * (done) updated desc for youtube videos from threejs-mesh-copy
 * (done) updated desc for youtube videos from threejs-examples-nested-groups
 * (done) updated desc for youtube videos from threejs-examples-tree
-
-* () weird-face-two prototype
-* () work on land-set-one dae folder in test threejs along with r3 of land object wrap example
-* () work on r6 of videoground
-
-
+* (done) start proto-many-object-tweening
 
 ### () - WED 08/24/2022
 * (done) updated desc for youtube videos from threejs-examples-weird-walk-one
