--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -17,9 +17,10 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - SAT 08/27/2022
 
 ### () - FRI 08/26/2022
-* () for post folder for threejs-examples-many-object-tweening based on r140 proto-many-object-tweening
-* () video1 for threejs-examples-many-object-tweening
+* (done) for post folder for threejs-examples-many-object-tweening based on r140 proto-many-object-tweening
 * () start post #1002 on threejs-examples-many-object-tweening
+
+* () video1 for threejs-examples-many-object-tweening
 * () buld and publish
 
 * () weird-face-two prototype
