--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -18,13 +18,13 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 
 ### () - FRI 08/26/2022
 * (done) for post folder for threejs-examples-many-object-tweening based on r140 proto-many-object-tweening
-* () start post #1002 on threejs-examples-many-object-tweening
+* (done) start post #1002 on threejs-examples-many-object-tweening
 
 * () video1 for threejs-examples-many-object-tweening
 * () buld and publish
 
-* () weird-face-two prototype
 * () work on land-set-one dae folder in test threejs along with r3 of land object wrap example
+* () weird-face-two prototype
 * () work on r6 of videoground
 
 ### () - THU 08/25/2022
