--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -7,6 +7,24 @@ Late last month I started working on improving video ground which I have been us
 For the last few months I have been focusing mainly just on threejs when it comes to editing older content as well as writing new content, and thus far there are not plains on changing that.
 
 <!-- ////////// //////////
+    WEEK 5
+/////////////// ///////-->
+
+## () - SUN 08/28/2022 to  WED 08/31/2022
+
+I would like to work on DAE files for the last few days of the month. Also the next prototype for fridays post nest month.
+
+### () - WED 08/31/2022
+
+### () - TUE 08/30/2022
+
+### () - MON 08/29/2022
+* () start r4 of dae tools based on what I have for late tween-many and object-grid-wrap-land projects
+
+### () - SUN 08/28/2022
+* () -
+
+<!-- ////////// //////////
     WEEK 4
 /////////////// ///////-->
 
@@ -15,17 +33,15 @@ For the last few months I have been focusing mainly just on threejs when it come
 This week I would like to start a prototype on threejs on Sunday that I will then write about on Fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
 
 ### () - SAT 08/27/2022
+* () work on land-set-one dae folder in test threejs along with r3 of land object wrap example
+* () weird-face-two prototype
+* () work on r6 of videoground
 
 ### () - FRI 08/26/2022
 * (done) for post folder for threejs-examples-many-object-tweening based on r140 proto-many-object-tweening
 * (done) start post #1002 on threejs-examples-many-object-tweening
-
-* () video1 for threejs-examples-many-object-tweening
-* () buld and publish
-
-* () work on land-set-one dae folder in test threejs along with r3 of land object wrap example
-* () weird-face-two prototype
-* () work on r6 of videoground
+* (done) video1 for threejs-examples-many-object-tweening
+* (done) buld and publish
 
 ### () - THU 08/25/2022
 * (done) updated desc for youtube videos from threejs-examples-biplane
