--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -22,7 +22,7 @@ I would like to work on DAE files for the last few days of the month. Also the n
 * () start r4 of dae tools based on what I have for late tween-many and object-grid-wrap-land projects
 
 ### () - SUN 08/28/2022
-* () -
+* () - work on land-set-one dae folder in test threejs along with r3 of land object wrap example
 
 <!-- ////////// //////////
     WEEK 4
@@ -33,7 +33,7 @@ I would like to work on DAE files for the last few days of the month. Also the n
 This week I would like to start a prototype on threejs on Sunday that I will then write about on Fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
 
 ### () - SAT 08/27/2022
-* () work on land-set-one dae folder in test threejs along with r3 of land object wrap example
+* (done) work on land-set-one dae folder in test threejs along with r3 of land object wrap example
 * () weird-face-two prototype
 * () work on r6 of videoground
 
