--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -19,10 +19,15 @@ I would like to work on DAE files for the last few days of the month. Also the n
 ### () - TUE 08/30/2022
 
 ### () - MON 08/29/2022
+* () start weird-blob-guy-one r140 prototype
+* () start weird-face-two r140 prototype
 * () start r4 of dae tools based on what I have for late tween-many and object-grid-wrap-land projects
+* () r3 of object-grid-wrap-land example
+* () work on r6 of videoground
 
 ### () - SUN 08/28/2022
-* () - work on land-set-one dae folder in test threejs along with r3 of land object wrap example
+* () work on land-set-one dae folder
+* () r3 of object-grid-wrap-land example
 
 <!-- ////////// //////////
     WEEK 4
@@ -34,8 +39,6 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 
 ### () - SAT 08/27/2022
 * (done) work on land-set-one dae folder in test threejs along with r3 of land object wrap example
-* () weird-face-two prototype
-* () work on r6 of videoground
 
 ### () - FRI 08/26/2022
 * (done) for post folder for threejs-examples-many-object-tweening based on r140 proto-many-object-tweening
