--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -17,17 +17,21 @@ I would like to work on DAE files for the last few days of the month. Also the n
 ### () - WED 08/31/2022
 
 ### () - TUE 08/30/2022
-
-### () - MON 08/29/2022
 * () start weird-blob-guy-one r140 prototype
 * () start weird-face-two r140 prototype
+
 * () start r4 of dae tools based on what I have for late tween-many and object-grid-wrap-land projects
 * () r3 of object-grid-wrap-land example
+
 * () work on r6 of videoground
 
+### () - MON 08/29/2022
+* () videoground-blog-posts: 
+* () edit threejs-
+
 ### () - SUN 08/28/2022
-* () work on land-set-one dae folder
-* () r3 of object-grid-wrap-land example
+* (done) r3 of object-grid-wrap-land - simple addAt method with function for custom logic
+* (done) work on land-set-one dae folder - 'c file' with origins at the bottom of trees 
 
 <!-- ////////// //////////
     WEEK 4
