--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -26,6 +26,7 @@ I would like to work on DAE files for the last few days of the month. Also the n
 * () work on r6 of videoground
 
 ### () - MON 08/29/2022
+* (done) work on r3 of object-grid-wrap-land example
 * () videoground-blog-posts: 
 * () edit threejs-
 
