--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -17,6 +17,11 @@ I would like to work on DAE files for the last few days of the month. Also the n
 ### () - WED 08/31/2022
 
 ### () - TUE 08/30/2022
+* (done) work on r3 of object-grid-wrap-land example
+
+* () videoground-blog-posts: 
+* () edit threejs-
+
 * () start weird-blob-guy-one r140 prototype
 * () start weird-face-two r140 prototype
 
@@ -27,8 +32,6 @@ I would like to work on DAE files for the last few days of the month. Also the n
 
 ### () - MON 08/29/2022
 * (done) work on r3 of object-grid-wrap-land example
-* () videoground-blog-posts: 
-* () edit threejs-
 
 ### () - SUN 08/28/2022
 * (done) r3 of object-grid-wrap-land - simple addAt method with function for custom logic
