--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -19,8 +19,8 @@ I would like to work on DAE files for the last few days of the month. Also the n
 ### () - TUE 08/30/2022
 * (done) work on r3 of object-grid-wrap-land example
 
-* () videoground-blog-posts: 
-* () edit threejs-
+* () edit threejs-object-grid-wrap-land
+* () videoground-blog-posts: threejs-object-grid-wrap-land video2
 
 * () start weird-blob-guy-one r140 prototype
 * () start weird-face-two r140 prototype
