--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -15,20 +15,17 @@ For the last few months I have been focusing mainly just on threejs when it come
 I would like to work on DAE files for the last few days of the month. Also the next prototype for fridays post nest month.
 
 ### () - WED 08/31/2022
-
-### () - TUE 08/30/2022
-* (done) work on r3 of object-grid-wrap-land example
-
-* () edit threejs-object-grid-wrap-land
-* () videoground-blog-posts: threejs-object-grid-wrap-land video2
+* (done) edit threejs-object-grid-wrap-land
+* () start r4 of dae tools based on what I have for late tween-many and object-grid-wrap-land projects
 
 * () start weird-blob-guy-one r140 prototype
 * () start weird-face-two r140 prototype
-
-* () start r4 of dae tools based on what I have for late tween-many and object-grid-wrap-land projects
-* () r3 of object-grid-wrap-land example
-
+* () r4 of object-grid-wrap-land example
 * () work on r6 of videoground
+
+### () - TUE 08/30/2022
+* (done) work on r3 of object-grid-wrap-land example
+* (done) videoground-blog-posts: threejs-object-grid-wrap-land video2
 
 ### () - MON 08/29/2022
 * (done) work on r3 of object-grid-wrap-land example
