--- a/todo/today/2022/todo_2022_08.md
+++ b/todo/today/2022/todo_2022_08.md
@@ -16,12 +16,7 @@ I would like to work on DAE files for the last few days of the month. Also the n
 
 ### () - WED 08/31/2022
 * (done) edit threejs-object-grid-wrap-land
-* () start r4 of dae tools based on what I have for late tween-many and object-grid-wrap-land projects
-
-* () start weird-blob-guy-one r140 prototype
-* () start weird-face-two r140 prototype
-* () r4 of object-grid-wrap-land example
-* () work on r6 of videoground
+* (done) start r4 of dae tools based on what I have for late tween-many and object-grid-wrap-land projects
 
 ### () - TUE 08/30/2022
 * (done) work on r3 of object-grid-wrap-land example
