--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -1,4 +1,20 @@
 # todo list for September 2022
 
-VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, THREEJS, ELECTRONJS
+THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS
 
+
+## () - SUN 09/01/2022 to  SAT 09/03/2022
+
+I would like to work on DAE files for the last few days of the month. Also the next prototype for fridays post nest month.
+
+### () - SAT 09/03/2022
+
+### () - FRI 09/02/2022
+
+### () - THU 09/01/2022
+* () start weird-blob-guy-one r140 prototype
+* () start weird-face-two r140 prototype
+
+* () r4 of dae-tools
+* () r4 of object-grid-wrap-land example
+* () work on r6 of videoground
