--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -12,6 +12,8 @@ I would like to work on DAE files for the last few days of the month. Also the n
 ### () - FRI 09/02/2022
 
 ### () - THU 09/01/2022
+* () edit threejs-vector3-clamp
+
 * () start weird-blob-guy-one r140 prototype
 * () start weird-face-two r140 prototype
 
