--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -10,13 +10,18 @@ I would like to work on DAE files for the last few days of the month. Also the n
 ### () - SAT 09/03/2022
 
 ### () - FRI 09/02/2022
+* () start post #1003 on threejs-vector3-wrap
+* () videoground-blog-posts: threejs-vector3-wrap
 
 ### () - THU 09/01/2022
-* () edit threejs-vector3-clamp
+* (done) edit threejs-vector3-clamp
+
+* () videoground-blog-posts: threejs-vector3-clamp
+
+* () start vector3-wrap demo folder
 
 * () start weird-blob-guy-one r140 prototype
 * () start weird-face-two r140 prototype
-
 * () r4 of dae-tools
 * () r4 of object-grid-wrap-land example
 * () work on r6 of videoground
