--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -2,22 +2,31 @@
 
 THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS
 
-## () - SUN 09/04/2022 to  SAT 09/10/2022
+## 
 
-### () - MON 09/05/2022
 * () r4 of dae-tools
 * () start weird-blob-guy-one r140 prototype
 * () start weird-face-two r140 prototype
-
 * () r4 of object-grid-wrap-land example
 * () work on r6 of videoground
 
-## () - SUN 09/04/2022
-* (done) expand threejs-vector3-wrap sections
-* () threejs-vector3-wrap 
-* () videoground-blog-posts: threejs-vector3-wrap
+## () - SUN 09/04/2022 to  SAT 09/10/2022
 
-## () - SUN 09/01/2022 to  SAT 09/03/2022
+### () - TUE 09/06/2022
+* () start a threejs-examples-vector-wrap-module forpost folder
+
+### () - MON 09/05/2022
+* (done) edit threejs-vector3-wrap
+
+* () finish example that is a start of a wrap vector moduleand edit post
+
+* () videoground-blog-posts: threejs-vector3-wrap
+* () start a vector-wrap module project prototype folder
+
+### () - SUN 09/04/2022
+* (done) expand threejs-vector3-wrap sections
+
+### () - SUN 09/01/2022 to  SAT 09/03/2022
 
 I would like to work on DAE files for the last few days of the month. Also the next prototype for fridays post nest month.
 
