--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -17,11 +17,9 @@ THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS
 
 ### () - MON 09/05/2022
 * (done) edit threejs-vector3-wrap
-
-* () finish example that is a start of a wrap vector module and edit post
+* (done) finish example that is a start of a wrap vector module and edit post
 
 * () videoground-blog-posts: threejs-vector3-wrap
-* () start a vector-wrap module project prototype folder
 
 ### () - SUN 09/04/2022
 * (done) expand threejs-vector3-wrap sections
@@ -35,7 +33,6 @@ I would like to work on DAE files for the last few days of the month. Also the n
 
 ### () - FRI 09/02/2022
 * (done) start post #1003 on threejs-vector3-wrap
-* () videoground-blog-posts: threejs-vector3-wrap
 
 ### () - THU 09/01/2022
 * (done) edit threejs-vector3-clamp
