--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -1,8 +1,10 @@
 # todo list for September 2022
 
-THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS
+THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS, LINUX
 
-## 
+## Things I might get to at some point
+
+I can only do so much per day, when I find something I want to do I can park it here first
 
 * () r4 of dae-tools
 * () start weird-blob-guy-one r140 prototype
@@ -12,17 +14,36 @@ THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS
 
 ## () - SUN 09/04/2022 to  SAT 09/10/2022
 
+### () - SAT 09/10/2022
+
+### () - FRI 09/09/2022
+* (done) start post #1004 on threejs-examples-wrap-module
+
+### () - THU 09/08/2022
+* () edit threejs-
+
+### () - WED 09/07/2022
+* () edit threejs-
+
 ### () - TUE 09/06/2022
-* () start a threejs-examples-vector-wrap-module forpost folder
+* () videoground-blog-posts: threejs-vector3-wrap
+* () edit threejs-vector3-wrap to include video
+
+* () start a threejs-examples-wrap-module forpost folder
+* () start a new DAE folder for lawn shelter idea
+
+* () edit threejs-
 
 ### () - MON 09/05/2022
 * (done) edit threejs-vector3-wrap
 * (done) finish example that is a start of a wrap vector module and edit post
 
-* () videoground-blog-posts: threejs-vector3-wrap
-
 ### () - SUN 09/04/2022
 * (done) expand threejs-vector3-wrap sections
+
+
+
+
 
 ### () - SUN 09/01/2022 to  SAT 09/03/2022
 
