--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -27,13 +27,12 @@ I can only do so much per day, when I find something I want to do I can park it 
 * () edit threejs-
 
 ### () - TUE 09/06/2022
-* () videoground-blog-posts: threejs-vector3-wrap
-* () edit threejs-vector3-wrap to include video
+* (done) videoground-blog-posts: threejs-vector3-wrap
+* (done) edit threejs-vector3-wrap to include video
 
-* () start a threejs-examples-wrap-module forpost folder
 * () start a new DAE folder for lawn shelter idea
+* () start a threejs-examples-wrap-module forpost folder
 
-* () edit threejs-
 
 ### () - MON 09/05/2022
 * (done) edit threejs-vector3-wrap
