--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -16,23 +16,25 @@ I can only do so much per day, when I find something I want to do I can park it 
 ## () - SUN 09/04/2022 to  SAT 09/10/2022
 
 ### () - SAT 09/10/2022
+* () work on new DAE folder shelter-one
 
 ### () - FRI 09/09/2022
+* () work on new DAE folder shelter-one
 * (done) start post #1004 on threejs-examples-wrap-module
 
 ### () - THU 09/08/2022
+* () work on new DAE folder shelter-one
 * () edit threejs-
 
 ### () - WED 09/07/2022
+* () work on new DAE folder shelter-one
+* () start a threejs-examples-wrap-module forpost folder
 * () edit threejs-
 
 ### () - TUE 09/06/2022
 * (done) videoground-blog-posts: threejs-vector3-wrap
 * (done) edit threejs-vector3-wrap to include video
-
-* () start a new DAE folder for lawn shelter idea
-* () start a threejs-examples-wrap-module forpost folder
-
+* (done) start a new DAE folder for lawn shelter idea
 
 ### () - MON 09/05/2022
 * (done) edit threejs-vector3-wrap
