--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -27,9 +27,13 @@ I can only do so much per day, when I find something I want to do I can park it 
 * () edit threejs-
 
 ### () - WED 09/07/2022
-* () work on new DAE folder shelter-one
-* () start a threejs-examples-wrap-module forpost folder
+* (done) work on new DAE folder shelter-one
+
 * () edit threejs-
+* () videoground-blog-posts: 
+
+* () start a threejs-examples-wrap-module forpost folder
+
 
 ### () - TUE 09/06/2022
 * (done) videoground-blog-posts: threejs-vector3-wrap
