--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -29,8 +29,8 @@ I can only do so much per day, when I find something I want to do I can park it 
 ### () - WED 09/07/2022
 * (done) work on new DAE folder shelter-one
 
-* () edit threejs-
-* () videoground-blog-posts: 
+* () edit threejs-vector3-distance-to
+* () videoground-blog-posts: threejs-vector3-distance-to
 
 * () start a threejs-examples-wrap-module forpost folder
 
