--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -28,6 +28,7 @@ I can only do so much per day, when I find something I want to do I can park it 
 
 ### () - WED 09/07/2022
 * (done) work on new DAE folder shelter-one
+* (done) threejs forpost folder for threejs-vector3-distance-to
 
 * () edit threejs-vector3-distance-to
 * () videoground-blog-posts: threejs-vector3-distance-to
