--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -23,17 +23,16 @@ I can only do so much per day, when I find something I want to do I can park it 
 * (done) start post #1004 on threejs-examples-wrap-module
 
 ### () - THU 09/08/2022
+* () start a threejs-examples-wrap-module forpost folder
 * () work on new DAE folder shelter-one
 * () edit threejs-
+* () videoground-blog-posts: threejs-
 
 ### () - WED 09/07/2022
 * (done) work on new DAE folder shelter-one
 * (done) threejs forpost folder for threejs-vector3-distance-to
 * (done) edit threejs-vector3-distance-to
 * (done) videoground-blog-posts: threejs-vector3-distance-to
-
-* () start a threejs-examples-wrap-module forpost folder
-
 
 ### () - TUE 09/06/2022
 * (done) videoground-blog-posts: threejs-vector3-wrap
