--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -20,13 +20,15 @@ I can only do so much per day, when I find something I want to do I can park it 
 
 ### () - FRI 09/09/2022
 * () work on new DAE folder shelter-one
-* (done) start post #1004 on threejs-examples-wrap-module
+* () start post #1004 on threejs-examples-wrap-module
 
 ### () - THU 09/08/2022
-* () start a threejs-examples-wrap-module forpost folder
-* () work on new DAE folder shelter-one
+* (done) start a threejs-examples-wrap-module forpost folder
 * () edit threejs-
 * () videoground-blog-posts: threejs-
+
+* () work on new DAE folder shelter-one
+
 
 ### () - WED 09/07/2022
 * (done) work on new DAE folder shelter-one
