--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -22,6 +22,9 @@ I can only do so much per day, when I find something I want to do I can park it 
 * () work on new DAE folder shelter-one
 * () start post #1004 on threejs-examples-wrap-module
 
+* () edit linux-ffmpeg ( include backlink request and email even back )
+* () build and publish
+
 ### () - THU 09/08/2022
 * (done) start a threejs-examples-wrap-module forpost folder
 * () edit threejs-
