--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -27,11 +27,9 @@ I can only do so much per day, when I find something I want to do I can park it 
 
 ### () - THU 09/08/2022
 * (done) start a threejs-examples-wrap-module forpost folder
-* () edit threejs-vector3-multiply-scalar
+* (done) edit threejs-vector3-multiply-scalar
 * () videoground-blog-posts: threejs-vector3-multiply-scalar
-
 * () work on new DAE folder shelter-one
-
 
 ### () - WED 09/07/2022
 * (done) work on new DAE folder shelter-one
