--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -19,17 +19,16 @@ I can only do so much per day, when I find something I want to do I can park it 
 * () work on new DAE folder shelter-one
 
 ### () - FRI 09/09/2022
-* () work on new DAE folder shelter-one
 * () start post #1004 on threejs-examples-wrap-module
-
+* () videoground-blog-posts: threejs-examples-wrap-module
 * () edit linux-ffmpeg ( include backlink request and email even back )
 * () build and publish
+* () work on new DAE folder shelter-one
 
 ### () - THU 09/08/2022
 * (done) start a threejs-examples-wrap-module forpost folder
 * (done) edit threejs-vector3-multiply-scalar
-* () videoground-blog-posts: threejs-vector3-multiply-scalar
-* () work on new DAE folder shelter-one
+* (done) videoground-blog-posts: threejs-vector3-multiply-scalar
 
 ### () - WED 09/07/2022
 * (done) work on new DAE folder shelter-one
