--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -6,6 +6,7 @@ THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS, LINUX
 
 I can only do so much per day, when I find something I want to do I can park it here first
 
+* () update youtube github video links from threejs-buffer-geometry-attributes-uv forward
 * () update math utils post with smooth step example, also update other related content
 * () r4 of dae-tools
 * () start weird-blob-guy-one r140 prototype
