--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -20,9 +20,12 @@ I can only do so much per day, when I find something I want to do I can park it 
 * () work on new DAE folder shelter-one
 
 ### () - FRI 09/09/2022
-* () start post #1004 on threejs-examples-wrap-module
+* (done) start post #1004 on threejs-examples-wrap-module
+
 * () videoground-blog-posts: threejs-examples-wrap-module
+
 * () edit linux-ffmpeg ( include backlink request and email even back )
+
 * () build and publish
 * () work on new DAE folder shelter-one
 
