--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -17,18 +17,15 @@ I can only do so much per day, when I find something I want to do I can park it 
 ## () - SUN 09/04/2022 to  SAT 09/10/2022
 
 ### () - SAT 09/10/2022
+* () build and publish
 * () work on new DAE folder shelter-one
 
 ### () - FRI 09/09/2022
 * (done) start post #1004 on threejs-examples-wrap-module
 * (done) edit linux-ffmpeg ( include backlink request and email back )
-
-* () test-threejs: new demo for euler and an 'art demo'
-* () videoground-blog-posts: threejs-examples-wrap-module
-* () edit threejs-examples-wrap-module with new demos and video
-
-* () build and publish
-* () work on new DAE folder shelter-one
+* (done) test-threejs: new demo for euler and an 'art demo'
+* (done) videoground-blog-posts: threejs-examples-wrap-module
+* (done) edit threejs-examples-wrap-module with new demos and video
 
 ### () - THU 09/08/2022
 * (done) start a threejs-examples-wrap-module forpost folder
