--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -4,7 +4,7 @@ THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS, LINUX
 
 ## Things I might get to at some point
 
-I can only do so much per day, when I find something I want to do I can park it here first
+I can only do so much per day, when I find something that needs doing I can park it here first.
 
 * () update youtube github video links from threejs-buffer-geometry-attributes-uv forward
 * () update math utils post with smooth step example, also update other related content
