--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -14,11 +14,29 @@ I can only do so much per day, when I find something that needs doing I can park
 * () r4 of object-grid-wrap-land example
 * () work on r6 of videoground
 
+## () - SUN 09/11/2022 to  SAT 09/17/2022
+
+
+### () - SAT 09/11/2022
+
+### () - FRI 09/11/2022
+
+### () - THU 09/11/2022
+
+### () - WED 09/11/2022
+
+### () - TUE 09/11/2022
+
+### () - MON 09/11/2022
+
+### () - SUN 09/11/2022
+* () work on new DAE folder shelter-one
+* () start a new DAE file for a shelf-unit for front room
+
 ## () - SUN 09/04/2022 to  SAT 09/10/2022
 
 ### () - SAT 09/10/2022
-* () build and publish
-* () work on new DAE folder shelter-one
+* (done) build and publish
 
 ### () - FRI 09/09/2022
 * (done) start post #1004 on threejs-examples-wrap-module
@@ -49,10 +67,6 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - SUN 09/04/2022
 * (done) expand threejs-vector3-wrap sections
-
-
-
-
 
 ### () - SUN 09/01/2022 to  SAT 09/03/2022
 
