--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -30,8 +30,14 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - MON 09/11/2022
 
 ### () - SUN 09/11/2022
-* () work on new DAE folder shelter-one
+
+* () test-threejs: start proto for SVG loader
+
+* () start DAE file for fireflowermendo.com logo?
+
+
 * () start a new DAE file for a shelf-unit for front room
+* () work on new DAE folder shelter-one
 
 ## () - SUN 09/04/2022 to  SAT 09/10/2022
 
