--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -20,6 +20,7 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - SAT 09/11/2022
 
 ### () - FRI 09/11/2022
+* () start post #1005 on threejs-svg-loader
 
 ### () - THU 09/11/2022
 
@@ -28,14 +29,10 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - TUE 09/11/2022
 
 ### () - MON 09/11/2022
+* () start for post folder for threejs-svg-loader
 
 ### () - SUN 09/11/2022
-
-* () test-threejs: start proto for SVG loader
-
-* () start DAE file for fireflowermendo.com logo?
-
-
+* (done) test-threejs: start proto for SVG loader
 * () start a new DAE file for a shelf-unit for front room
 * () work on new DAE folder shelter-one
 
