--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -6,13 +6,23 @@ THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS, LINUX
 
 I can only do so much per day, when I find something that needs doing I can park it here first.
 
-* () update youtube github video links from threejs-buffer-geometry-attributes-uv forward
-* () update math utils post with smooth step example, also update other related content
-* () r4 of dae-tools
+* () start a new DAE file for a shelf-unit for front room
+* () work on new DAE folder shelter-one
+
+## PROTOTYPES
 * () start weird-blob-guy-one r140 prototype
 * () start weird-face-two r140 prototype
 * () r4 of object-grid-wrap-land example
-* () work on r6 of videoground
+
+## EDIT
+* () r4 of dae-tools and edit post
+* () update math utils post with smooth step example, also update other related content
+
+
+* () update youtube github video links from threejs-buffer-geometry-attributes-uv forward
+
+## VIDEOGROUND
+* () r6 of videoground - use user data folder to get start video URI and start folder for opening files
 
 ## () - SUN 09/11/2022 to  SAT 09/17/2022
 
@@ -33,8 +43,6 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - SUN 09/11/2022
 * (done) test-threejs: start proto for SVG loader
-* () start a new DAE file for a shelf-unit for front room
-* () work on new DAE folder shelter-one
 
 ## () - SUN 09/04/2022 to  SAT 09/10/2022
 
