--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -4,25 +4,34 @@ THREEJS, VIDEOGROUND-BLOG-POSTS, VIDEOGROUND, ELECTRONJS, LINUX
 
 ## Things I might get to at some point
 
-I can only do so much per day, when I find something that needs doing I can park it here first.
+I can only do so much per day, when I find something that needs doing I can park it here first. I can then plane out a week by taking items from here.
 
 * () start a new DAE file for a shelf-unit for front room
 * () work on new DAE folder shelter-one
 
 ## PROTOTYPES
-* () start weird-blob-guy-one r140 prototype
-* () start weird-face-two r140 prototype
-* () r4 of object-grid-wrap-land example
+* () start a threejs-geometry-utils proto folder
+* () start a threejs-export-frames proto folder
+* () start threejs-examples-weird-blob-guy-one r140 prototype
+* () start threejs-examples-weird-face-two r140 prototype
 
 ## EDIT
-* () r4 of dae-tools and edit post
-* () update math utils post with smooth step example, also update other related content
+* () threejs-export-webm-whammy: for post folder
+* () threejs-examples-dae-tools: r4 of dae-tools and edit post
+* () threejs-examples-object-grid-wrap-land : r4 of example
 
-
+## YOUTUBE
 * () update youtube github video links from threejs-buffer-geometry-attributes-uv forward
 
 ## VIDEOGROUND
 * () r6 of videoground - use user data folder to get start video URI and start folder for opening files
+
+## VIDEOGROUND BLOG POSTS
+* () threejs-math-utils
+
+
+
+
 
 ## () - SUN 09/11/2022 to  SAT 09/17/2022
 
@@ -39,10 +48,16 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - TUE 09/11/2022
 
 ### () - MON 09/11/2022
+* () threejs-math-utils: smooth step example.
 * () start for post folder for threejs-svg-loader
+* () videoground-blog-posts: 
 
 ### () - SUN 09/11/2022
 * (done) test-threejs: start proto for SVG loader
+
+
+
+
 
 ## () - SUN 09/04/2022 to  SAT 09/10/2022
 
