--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -48,9 +48,9 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - TUE 09/11/2022
 
 ### () - MON 09/11/2022
-* () threejs-math-utils: smooth step example.
+* (done) threejs-math-utils: smooth step example.
+* () videoground-blog-posts: video1 for threejs-math-utils
 * () start for post folder for threejs-svg-loader
-* () videoground-blog-posts: 
 
 ### () - SUN 09/11/2022
 * (done) test-threejs: start proto for SVG loader
