--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -49,7 +49,7 @@ I can only do so much per day, when I find something that needs doing I can park
 
 ### () - MON 09/11/2022
 * (done) threejs-math-utils: smooth step example.
-* () videoground-blog-posts: video1 for threejs-math-utils
+* (done) videoground-blog-posts: video1 for threejs-math-utils
 * () start for post folder for threejs-svg-loader
 
 ### () - SUN 09/11/2022
