--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -50,7 +50,7 @@ I can only do so much per day, when I find something that needs doing I can park
 ### () - MON 09/11/2022
 * (done) threejs-math-utils: smooth step example.
 * (done) videoground-blog-posts: video1 for threejs-math-utils
-* () start for post folder for threejs-svg-loader
+* (done) start for post folder for threejs-svg-loader
 
 ### () - SUN 09/11/2022
 * (done) test-threejs: start proto for SVG loader
