--- a/todo/today/todo_2022_09.md
+++ b/todo/today/todo_2022_09.md
@@ -29,9 +29,11 @@ I can only do so much per day, when I find something that needs doing I can park
 ## VIDEOGROUND BLOG POSTS
 * () threejs-math-utils
 
-
-
-
+## BLOG POST SCRIPTS
+* () start a pdbf ( post database file ) cli tool for createing one large file from a posts folder, and inverse of such.
+* () pdbf : have a read feature that can be used to read the text of just one post
+* () pdbf : have a write feature that can be used to update the text of just one post
+* () pdbf : add a feature like that of the fresh-by-cat app, but it will just read the one file and spit to stdout
 
 ## () - SUN 09/11/2022 to  SAT 09/17/2022
 
